--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  // "go.inferGopath": false,
-  // "go.gopath": "/Users/Robert/www/rproj/qorproj:/Users/Robert/www/rproj/qorproj/src/vendor"
+	// "go.inferGopath": false,
+	// "go.gopath": "/Users/Robert/www/rproj/qorproj"
 }
