--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-csscomb": "^3.0.6",
     "gulp-load-plugins": "^1.5.0",
     "gulp-sass": "3.1.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^2.1.2",
     "gulp-webpack": "^1.5.0",
     "material-design-icons": "^2.2.3",
